--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lottie-web": "^5.12.2",
     "ngx-lottie": "^10.0.0",
     "rxjs": "~7.8.0",
+    "swiper": "^11.0.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
