--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-server": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.1",
+    "@vercel/analytics": "^1.1.3",
     "express": "^4.18.2",
     "firebase": "^10.8.0",
     "lottie-web": "^5.12.2",
