--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.1",
     "@vercel/analytics": "^1.1.3",
+    "@vercel/speed-insights": "^1.0.9",
     "express": "^4.18.2",
     "firebase": "^10.8.0",
     "lottie-web": "^5.12.2",
